--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D- Portfolio Book</title>
+  <title>My Portfolio Book</title>
   <!-- BoxIcon -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <!-- style -->
   <link rel="stylesheet" href="style.css" />
   <!-- skill logos -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+  <link rel="icon" href="profile.png" type="image/x-icon">
 
 
 </head>
@@ -24,21 +25,21 @@
       <!-- profile page -->
       <div class="book-page page-left">
         <div class="profile-page">
-          <img src="./Logo.png" alt="" />
+          <img src="./Logo.png" alt="Sivasankar portfolio logo">
           <h1>Mr Sivasankar</h1>
           <h3>AI & ML Enthusiast - Freelancer</h3>
 
           <div class="social-media">
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-            <a href="#"><i class="bx bxl-github"></i></a>
-            <a href="#"><i class="bx bxl-medium"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/sivasankar-rachamadugu/" target="new"><i
+                class="bx bxl-linkedin-square"></i></a>
+            <a href="https://github.com/RACHAMADUGUSIVASANKAR" target="new"><i class="bx bxl-github"></i></a>
+            <a href="https://medium.com/@sivasankar99122" target="new"><i class="bx bxl-medium"></i></a>
+            <a href="https://www.instagram.com/siva_rach/" target="new"><i class="bx bxl-instagram"></i></a>
           </div>
 
           <p>
             Hi, I am a B.Tech student in Computer Science and Engineering (AI & ML) at Srinivasa Ramanujan Institute of
-            Technology,
-            with a strong interest in AI, automation, and modern technologies.
+            Technology, with a strong interest in AI, automation, and modern technologies.
             My goal is to become an AI Engineer by building skills in machine learning, cloud-based AI, and real-world
             projects that create value.
             Along with my studies, I work as a freelancer, creating videos, graphics, and promotional content for
@@ -57,14 +58,14 @@
       <div class="book-page page-right turn" id="turn-1">
         <!-- page 1 (work experience) -->
         <div class="page-front">
-          <h1 class="title">Work Experience</h1>
+          <h2 class="title">Work Experience</h2>
 
           <div class="workeduc-box">
             <div class="workeduc-content">
               <span class="year"><i class="bx bxs-calendar"></i>2025 - present</span>
               <h3>Founder&nbsp;-&nbsp;EditorVfxCraft</h3>
               <h4 style="font-weight: normal;">
-                • Founded EditorVfxCraft, an online freelance service for video editing and graphic design. I create
+                Founded EditorVfxCraft, an online freelance service for video editing and graphic design. I create
                 videos, thumbnails, posters, and social media content, delivering quality work on time based on client
                 needs.
               </h4>
@@ -94,12 +95,12 @@
 
         <!-- page 2 (education) -->
         <div class="page-back">
-          <h1 class="title">Education</h1>
+          <h2 class="title">Education</h2>
 
           <div class="workeduc-box">
             <div class="workeduc-content">
               <span class="year"><i class="bx bxs-calendar"></i>2023 - 2027</span>
-              <h3>College</h3>
+              <h3>Undergraduation</h3>
               <p>
                 Currently pursuing Bachelor of Technology (B.Tech) in CSE(AI&ML) at SRIT, Andhra Pradesh. </p>
             </div>
@@ -113,7 +114,7 @@
             </div>
             <div class="workeduc-content">
               <span class="year"><i class="bx bxs-calendar"></i>2020 - 2021</span>
-              <h3>SCC</h3>
+              <h3>SSC</h3>
               <p>
                 Completed Secondary School Certificate (SSC) from Andhra Pradesh State Board with 73.16% . </p>
             </div>
@@ -133,44 +134,45 @@
       <div class="book-page page-right turn" id="turn-2">
         <!-- page 3 (my services) -->
         <div class="page-front">
-          <h1 class="title">My Services</h1>
+          <h2 class="title">My Services</h2>
 
           <div class="services-box">
+
+            <!-- AI Automations -->
             <div class="services-content">
-              <i class="bx bx-code-alt"></i>
-              <h3>Web Development</h3>
+              <i class="bx bx-bot"></i>
+              <h3>AI Automations</h3>
               <p>
-                Lorem ipsum
+                Automating workflows using AI tools to save time, reduce manual work,
+                and improve productivity.
               </p>
               <a href="#" class="btn">Read More</a>
             </div>
 
+            <!-- Video Editing -->
             <div class="services-content">
-              <i class="bx bxs-paint"></i>
-              <h3>Creative Design</h3>
+              <i class="bx bx-video"></i>
+              <h3>Video Editing</h3>
               <p>
-                Lorem ipsum
+                Professional video editing for social media, YouTube, and promotional
+                content with smooth transitions.
               </p>
-              <a href="#" class="btn">Read More</a>
+              <a href="https://www.linkedin.com/services/page/b68242338a5a829111/" target="new" class="btn">Read
+                More</a>
             </div>
 
+            <!-- Graphic Designer -->
             <div class="services-content">
-              <i class="bx bx-bar-chart-alt"></i>
-              <h3>Digital Marketing</h3>
+              <i class="bx bxs-palette"></i>
+              <h3>Graphic Design</h3>
               <p>
-                Lorem ipsum
+                Creative designs including posters, thumbnails, logos, and branding
+                visuals that stand out.
               </p>
-              <a href="#" class="btn">Read More</a>
+              <a href="https://www.linkedin.com/services/page/b68242338a5a829111/" target="new" class="btn">Read
+                More</a>
             </div>
 
-            <div class="services-content">
-              <i class="bx bx-search"></i>
-              <h3>SEO</h3>
-              <p>
-                Lorem ipsum
-              </p>
-              <a href="#" class="btn">Read More</a>
-            </div>
           </div>
 
           <span class="number-page">3</span>
@@ -179,11 +181,11 @@
           <span class="nextprev-btn" data-page="turn-2">
             <i class="bx bx-chevron-right"></i>
           </span>
-
         </div>
+
         <!-- page 4 (my skills) -->
         <div class="page-back">
-          <h1 class="title">My Skills</h1>
+          <h2 class="title">My Skills</h2>
 
           <div class="skills-box">
             <!-- Front-End -->
@@ -211,7 +213,7 @@
             <div class="skills-content">
               <h3>Frameworks</h3>
               <div class="content">
-                <span><i class="devicon-python-plain colored" style="font-size:40px"></i></span>
+                <span><i class="devicon-pandas-plain colored" style="font-size:40px"></i></span>
                 <span><i class="devicon-numpy-original colored" style="font-size:40px"></i> NumPy</span>
                 <span><i class="devicon-matplotlib-plain colored"></i></span>
               </div>
@@ -231,7 +233,7 @@
                 <span><i class="devicon-github-original colored"></i></span>
                 <span><i class="devicon-vscode-plain colored"></i></span>
                 <span><i class="devicon-jupyter-plain colored"></i></span>
-                <span><i class="devicon-N8N-plain colored"></i>N8N</span>
+                <span><i class="devicon-n8n-plain colored"></i>N8N</span>
               </div>
             </div>
 
@@ -251,41 +253,47 @@
       <div class="book-page page-right turn" id="turn-3">
         <!-- page 5 (latest project or many portfolio) -->
         <div class="page-front">
-          <h1 class="title">Latest Project</h1>
+          <h2 class="title">Latest Project</h2>
 
           <div class="portfolio-box">
-            
+
 
             <div class="info-box">
               <div class="info-title">
                 <h3>Facial-Expression-Detection</h3>
-                <a href="#">Link <i class="bx bx-link-external"></i></a>
+                <a href="https://github.com/RACHAMADUGUSIVASANKAR/Facial-Expression-Detection" target="new">Link <i
+                    class="bx bx-link-external"></i></a>
               </div>
-              <p>Tech Used : Python, git, vscode</p>
-              <p>Detects yawning and smiling in real-time using your webcam. It uses dlib for facial landmarks and OpenCV for image processing and Haar cascades.</p>
+              <p>Tech Used : Python, git, vscode.</p>
+              <p>Detects yawning and smiling in real-time using your webcam. It uses dlib for facial landmarks and
+                OpenCV for image processing and Haar cascades.</p>
             </div>
 
             <div class="info-box">
               <div class="info-title">
                 <h3>ScriptEmotion-prediction</h3>
-                <a href="#">Link <i class="bx bx-link-external"></i></a>
+                <a href="https://github.com/RACHAMADUGUSIVASANKAR/ScriptEmotion-prediction" target="new">Link <i
+                    class="bx bx-link-external"></i></a>
               </div>
-              <p>Tech Used : Python, kaggle, html, css, flask, Procfile, git, vscode</p>
-              <p>A Flask web application that predicts the genre of a movie based on its description or script snippet.</p>
+              <p>Tech Used : Python, kaggle, html, css, flask, Procfile, git, vscode.</p>
+              <p>A Flask web application that predicts the genre of a movie based on its description or script snippet.
+              </p>
             </div>
 
             <div class="info-box">
               <div class="info-title">
                 <h3>Fake-News-Detection</h3>
-                <a href="#">Link <i class="bx bx-link-external"></i></a>
+                <a href="https://github.com/RACHAMADUGUSIVASANKAR/Fake-News-Detection" target="new">Link <i
+                    class="bx bx-link-external"></i></a>
               </div>
-              <p>Tech Used : Python, kaggle, html, css, javascript, flask, pandas, scikit-learn</p>
-              <p>This project trains simple NLP models (Multinomial Naive Bayes and Logistic Regression) to detect fake news headlines.</p>
+              <p>Tech Used : Python, kaggle, html, css, javascript, flask, pandas, scikit-learn.</p>
+              <p>This project trains simple NLP models (Multinomial Naive Bayes & Logistic Regression) to detect fake
+                news headlines.</p>
             </div>
 
             <div class="btn-box">
-              
-              <a href="#" class="btn">More Projects</a>
+
+              <a href="https://github.com/RACHAMADUGUSIVASANKAR" target="new" class="btn">More Projects</a>
 
             </div>
           </div>
@@ -301,15 +309,16 @@
 
         <!-- page 6 (contact me!) -->
         <div class="page-back">
-          <h1 class="title">Contact Me!</h1>
+          <h2 class="title">Contact Me!</h2>
 
           <div class="contact-box">
-            <form action="">
-              <input type="text" class="field" placeholder="Full Name" required>
-              <input type="email" class="field" placeholder="Email Address" required>
-              <textarea name="" id="" cols="30" rows="10" class="field" placeholder="Your Message"></textarea>
+            <form id="contact-form">
+              <input type="text" name="user_name" class="field" placeholder="Full Name" required>
+              <input type="email" name="user_email" class="field" placeholder="Email Address" required>
+              <textarea name="message" class="field" placeholder="Your Message" required></textarea>
               <input type="submit" value="Send Message" class="btn">
             </form>
+
           </div>
 
           <span class="number-page">6</span>
@@ -330,6 +339,13 @@
   </div>
 
   <!-- script -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script>
+    (function () {
+      emailjs.init("CNUwnFThwW_IzHWlH"); //public key of emailjs website
+    })();
+  </script>
+
   <script src="script.js"></script>
 </body>
 
