--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css" />
   <!-- skill logos -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-  <link rel="icon" href="profile.png" type="image/x-icon">
+  <link rel="icon" href="resourse/profile.png" type="image/x-icon">
 
 
 </head>
@@ -25,7 +25,7 @@
       <!-- profile page -->
       <div class="book-page page-left">
         <div class="profile-page">
-          <img src="./Logo.png" alt="Sivasankar portfolio logo">
+          <img src="resourse/Logo.png" alt="Sivasankar portfolio logo">
           <h1>Mr Sivasankar</h1>
           <h3>AI & ML Enthusiast - Freelancer</h3>
 
@@ -48,7 +48,10 @@
           </p>
 
           <div class="btn-box">
-            <a href="#" class="btn">Download CV</a>
+            <a href="resourse/Sivasankar_Resume.pdf" class="btn" target="_blank" rel="noopener" download>
+              Download CV
+            </a>
+
             <a href="#" class="btn contact-me">Contact Me!</a>
           </div>
         </div>
@@ -156,7 +159,8 @@
               <p>
                 Professional video editing for social media, YouTube, and promotional
                 content with smooth transitions.
-              </p>
+
+              </p><br>
               <a href="https://www.linkedin.com/services/page/b68242338a5a829111/" target="new" class="btn">Read
                 More</a>
             </div>
@@ -342,7 +346,7 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function () {
-      emailjs.init("CNUwnFThwW_IzHWlH"); //public key of emailjs website
+      emailjs.init("CNUwnFThwW_IzHWlH");
     })();
   </script>
 
